<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_left1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_right1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh_token_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/color_global_accent"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_right1"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_left1"
        app:layout_constraintTop_toTopOf="@+id/guideline_h_10" />

    <TextView
        android:id="@+id/tv_main_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_text"
        android:paddingHorizontal="@dimen/padding_text"
        android:text="@string/chose_option_description"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/color_global_accent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_right1"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_left1"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_refresh_token"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_text"
        android:text="(token)"
        android:ellipsize="middle"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/color_global_accent"
        android:maxLines="5"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_right1"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_left1"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_description" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/buttons_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h_60"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_right1"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_left1"
        app:layout_constraintTop_toTopOf="@+id/guideline_h_60">

        <Button
            android:id="@+id/btnLinkExisting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="10dp"
            android:text="@string/link_teslafi_account"
            android:backgroundTint="@color/color_blue"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="10dp"
            android:text="@string/create_teslafi_account"
            android:backgroundTint="@color/color_blue"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnCopyToken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="10dp"
            android:text="@string/copy_refresh_token"
            android:backgroundTint="@color/color_green"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_right1"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_left1"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
