<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_left1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_right1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.21" />

    <com.teslafi.authandroid.ui.views.ElevationImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="3dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h_25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent=".5"
        app:layout_constraintDimensionRatio="h,15:8"
        app:srcCompat="@drawable/teslafi_logo"
        app:compatElevation="8dp"
        app:isTranslucent="false"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_link_tesla_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/color_global_accent"
        app:layout_constraintBottom_toTopOf="@id/buttons_container"
        app:layout_constraintEnd_toStartOf="@id/guideline_v_right1"
        app:layout_constraintStart_toStartOf="@id/guideline_v_left1"
        app:layout_constraintTop_toTopOf="@id/guideline_h_25" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/buttons_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/bottom_description"
        app:layout_constraintEnd_toStartOf="@id/guideline_v_right1"
        app:layout_constraintStart_toStartOf="@id/guideline_v_left1"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checkedButton="@id/btnGlobal"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGlobal"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/global"
                android:textAllCaps="false"
                app:shapeAppearance="@style/Rounded" />
            <!--style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
            <!--style="?attr/materialButtonOutlinedStyle"-->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnChina"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/china"
                android:textAllCaps="false"
                app:shapeAppearance="@style/Rounded" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <Button
            android:id="@+id/login_using_tesla_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="18dp"
            android:padding="10dp"
            android:text="@string/action_auth_with_tesla"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/bottom_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_description"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_right1"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_left1"
        app:layout_constraintTop_toBottomOf="@+id/buttons_container" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>
